--- a/markup.ipynb
+++ b/markup.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c2ee351f",
+   "id": "3d9df07f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "56fb5ea7",
+   "id": "6250f205",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "826858fd",
+   "id": "60edf0e5",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "16255c9b",
+   "id": "01664b79",
    "metadata": {},
    "outputs": [
     {
@@ -88,8 +88,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "5b83c336",
+   "execution_count": 85,
+   "id": "8f0dab27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,8 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "8114a60d",
+   "execution_count": 86,
+   "id": "b4b5000f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,32 +108,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "fc625e54",
+   "execution_count": 87,
+   "id": "0c38d4ae",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[ 0.3249, -1.0418, -0.0879, -0.2113,  0.8720, -0.0946,  0.8089,\n",
-       "          -0.7325, -0.4486,  0.5377,  0.1897, -1.1196, -0.4163, -0.4646,\n",
-       "           0.4444,  0.0860,  0.4843,  1.0113, -0.6168,  0.5033,  0.5977,\n",
-       "          -0.0941,  0.2302,  0.3485],\n",
-       "         [ 0.3249, -1.0418, -0.0879, -0.2113,  0.8720, -0.0946,  0.8089,\n",
-       "          -0.7325, -0.4486,  0.5377,  0.1897, -1.1196, -0.4163, -0.4646,\n",
-       "           0.4444,  0.0860,  0.4843,  1.0113, -0.6168,  0.5033,  0.5977,\n",
-       "          -0.0941,  0.2302,  0.3485],\n",
-       "         [ 0.3249, -1.0418, -0.0879, -0.2113,  0.8720, -0.0946,  0.8089,\n",
-       "          -0.7325, -0.4486,  0.5377,  0.1897, -1.1196, -0.4163, -0.4646,\n",
-       "           0.4444,  0.0860,  0.4843,  1.0113, -0.6168,  0.5033,  0.5977,\n",
-       "          -0.0941,  0.2302,  0.3485],\n",
-       "         [ 0.3249, -1.0418, -0.0879, -0.2113,  0.8720, -0.0946,  0.8089,\n",
-       "          -0.7325, -0.4486,  0.5377,  0.1897, -1.1196, -0.4163, -0.4646,\n",
-       "           0.4444,  0.0860,  0.4843,  1.0113, -0.6168,  0.5033,  0.5977,\n",
-       "          -0.0941,  0.2302,  0.3485]]], grad_fn=<UnsafeViewBackward0>)"
+       "tensor([[[ 0.3027,  0.6949,  0.4734, -0.3146,  0.0827, -0.0691, -0.2610,\n",
+       "          -1.3717,  0.8484, -0.1178, -0.1454,  0.5303,  0.2185, -0.0925,\n",
+       "           0.2764, -0.1233,  0.1634,  0.9582,  0.0158, -0.5594, -1.2482,\n",
+       "           1.1213,  0.3296, -0.4701],\n",
+       "         [ 0.3027,  0.6949,  0.4734, -0.3146,  0.0827, -0.0691, -0.2610,\n",
+       "          -1.3717,  0.8484, -0.1178, -0.1454,  0.5303,  0.2185, -0.0925,\n",
+       "           0.2764, -0.1233,  0.1634,  0.9582,  0.0158, -0.5594, -1.2482,\n",
+       "           1.1213,  0.3296, -0.4701],\n",
+       "         [ 0.3027,  0.6949,  0.4734, -0.3146,  0.0827, -0.0691, -0.2610,\n",
+       "          -1.3717,  0.8484, -0.1178, -0.1454,  0.5303,  0.2185, -0.0925,\n",
+       "           0.2764, -0.1233,  0.1634,  0.9582,  0.0158, -0.5594, -1.2482,\n",
+       "           1.1213,  0.3296, -0.4701],\n",
+       "         [ 0.3027,  0.6949,  0.4734, -0.3146,  0.0827, -0.0691, -0.2610,\n",
+       "          -1.3717,  0.8484, -0.1178, -0.1454,  0.5303,  0.2185, -0.0925,\n",
+       "           0.2764, -0.1233,  0.1634,  0.9582,  0.0158, -0.5594, -1.2482,\n",
+       "           1.1213,  0.3296, -0.4701]]], grad_fn=<UnsafeViewBackward0>)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,18 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "2644b44f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q, k, v = a(x).split(8, dim =2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "6f8455df",
+   "execution_count": 88,
+   "id": "a0b26ef2",
    "metadata": {},
    "outputs": [
     {
@@ -164,40 +154,20 @@
        "torch.Size([1, 4, 8])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "q, k, v = a(x).split(8, dim =2)\n",
     "q.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "b8aa3616",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 8, 4])"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q.transpose(1, 2).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "2e4e08b4",
+   "execution_count": 89,
+   "id": "27ce607d",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +176,7 @@
        "torch.Size([1, 4, 2, 4])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,8 +188,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 90,
+   "id": "705571f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 2, 4, 4])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q = q.transpose(1, 2)\n",
+    "q.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "a9fc872e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 2, 4, 4])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "att = (q @ q.transpose(-2, -1)) * (1.0 / math.sqrt(q.shape[-1]))\n",
+    "att.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2f3cba2c",
+   "id": "852a9a16",
    "metadata": {},
    "outputs": [],
    "source": []
